--- a/src/view/CozinhaView.fxml
+++ b/src/view/CozinhaView.fxml
@@ -22,12 +22,12 @@
         </columns>
       </TableView>
       <TextField fx:id="tfNpedidos" layoutX="526.0" layoutY="156.0" prefHeight="25.0" prefWidth="671.0" text="Pedido nº:" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="156.0" />
-      <Button fx:id="btnFinalizar" layoutX="395.0" layoutY="492.0" mnemonicParsing="false" onAction="#finalizarPedido" prefHeight="47.0" prefWidth="137.0" style="-fx-background-color: #035d86;" text="Finalizar" textFill="#cbd2da" AnchorPane.rightAnchor="701.0">
+      <Button fx:id="btnFinalizar" layoutX="605.0" layoutY="513.0" mnemonicParsing="false" onAction="#finalizarPedido" prefHeight="47.0" prefWidth="137.0" style="-fx-background-color: #035d86;" text="Finalizar" textFill="#cbd2da" AnchorPane.rightAnchor="703.0">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btnDetalhes" layoutX="395.0" layoutY="666.0" mnemonicParsing="false" onAction="#verDetalhesPedido" prefHeight="47.0" prefWidth="137.0" style="-fx-background-color: #035d86;" text="Ver Detalhes" textFill="#cbd2da" AnchorPane.rightAnchor="701.0">
+      <Button fx:id="btnDetalhes" layoutX="607.0" layoutY="638.0" mnemonicParsing="false" onAction="#verDetalhesPedido" prefHeight="47.0" prefWidth="137.0" style="-fx-background-color: #035d86;" text="Ver Detalhes" textFill="#cbd2da" AnchorPane.rightAnchor="701.0">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -70,5 +70,10 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Label>
+      <Button fx:id="btnAbrirPedido" layoutX="607.0" layoutY="384.0" mnemonicParsing="false" onAction="#abrirPedido" prefHeight="47.0" prefWidth="137.0" style="-fx-background-color: #035d86;" text="Abrir pedido" textFill="#cbd2da" AnchorPane.rightAnchor="703.0">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
